# glance

./: .envrc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.org  cabal.project  devenv.nix  flake.nix  glance.cabal  glance.org  package.yaml  run-tests.sh  stack.yaml
app/: Demo.hs  Main.hs  Sandbox.hs
src/Data/: Config.hs  Org.hs  OrgElement.hs
src/Data/Org/: Base.hs  Context.hs  Element.hs  Generic.hs  Headline.hs  Identifiable.hs  Identity.hs  Indent.hs  Keyword.hs  Lexeme.hs  MutableState.hs  Parse.hs  Parser.hs  PlainText.hs  Pragma.hs  Priority.hs  Properties.hs  Property.hs  PropertyBlock.hs  Sentence.hs  Separator.hs  State.hs  Tags.hs  Timestamp.hs  Title.hs  Todo.hs  Token.hs  Types.hs
src/Data/Org/Elements/: Base.hs  Headline.hs  Indent.hs  Keyword.hs  Pragma.hs  Priority.hs  Properties.hs  Property.hs  Sentence.hs  Separator.hs  Tags.hs  Timestamp.hs  Title.hs  Todo.hs  Token.hs
src/Persist/: Org.hs
src/Repl/: Org.hs  State.hs
test/: Spec.hs  TestDefaults.hs  TestLexer.hs  TestParser.hs  TestRepr.hs  TestRepresentation.hs
