cabal-version: 1.12

name:           glance
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/rails-to-cosmos/glance#readme>
homepage:       https://github.com/rails-to-cosmos/glance#readme
bug-reports:    https://github.com/rails-to-cosmos/glance/issues
author:         Dmitry Akatov
maintainer:     dmitry.akatov@protonmail.com
copyright:      Dmitry Akatov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/rails-to-cosmos/glance

library
  exposed-modules:
      Data.Config
      Data.Org
      Persist.Org
      Repl.Org
  other-modules:
      Paths_glance
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
      RecordWildCards
      GADTs
      FlexibleInstances
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , exceptions
    , fgl
    , filepath
    , haskeline
    , megaparsec
    , monad-logger
    , mtl
    , persistent
    , persistent-mtl
    , persistent-sqlite
    , persistent-template
    , random
    , resource-pool
    , text
    , text-show
    , time
    , unliftio
    , uuid
    , cryptohash
    , memory
    , binary
  default-language: Haskell2010

executable glance
  main-is: Main.hs
  other-modules:
      Paths_glance
  hs-source-dirs:
      app
  default-extensions:
      OverloadedStrings
      RecordWildCards
      FlexibleInstances
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , exceptions
    , fgl
    , filepath
    , glance
    , haskeline
    , megaparsec
    , monad-logger
    , mtl
    , persistent
    , persistent-mtl
    , persistent-sqlite
    , persistent-template
    , random
    , resource-pool
    , text
    , text-show
    , time
    , unliftio
    , uuid
  default-language: Haskell2010

executable demo
  main-is:             Demo.hs
  hs-source-dirs:      app
  build-depends:       base
                     , text
                     , glance
  default-language:    Haskell2010

test-suite glance-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      TestDefaults
      TestParser
      TestRepr
      Paths_glance
  hs-source-dirs:
      test
  default-extensions:
      OverloadedStrings
      RecordWildCards
      FlexibleInstances
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , exceptions
    , fgl
    , filepath
    , glance
    , haskeline
    , megaparsec
    , monad-logger
    , mtl
    , persistent
    , persistent-mtl
    , persistent-sqlite
    , persistent-template
    , random
    , resource-pool
    , tasty
    , tasty-hunit
    , text
    , text-show
    , time
    , unliftio
    , uuid
  default-language: Haskell2010
